# UnsupervisedMasking

./: .gitignore  .gitmodules  .rsyncignore  Dockerfile  NOTES.md  README.md  TODO.md  ensemble.py  fix_state_dict.py  get_epoch.py  interactive.sh  interactive_das.sh  l102results.txt  load.sh  main.py  plot.py  premove.sh  profile_log.txt  push.sh  push_das.sh  requirements.in  requirements.txt  run.sh  run_das.sh  simple_example.py  waitforx.sh
conf/: baseline.yaml  baseline_clip.yaml  default.yaml  plotting.yaml  pwd_submask.yaml  pwd_submask_lin.yaml  submask.yaml  submask_clip.yaml  submask_clip_p.yaml  submask_lin.yaml
conf_ensembling/: c100_fixed.yaml  ensembling.yaml  ensembling1.yaml  ensembling2.yaml  ensembling5.yaml  ensembling5_complete.yaml  ensembling5_complete_10p.yaml  ensembling5_shuffled.yaml  inat5_complete.yaml  inat5_fixed.yaml
conf_plotting/: plotting.yaml
figures/: .2023-04-07-Note-11-28.autosave.xopp  2023-04-07-Note-11-28.xopp
jobs/: Bc1.job  allsup.tex  lps.sh  pbs.sh  pbx.sh  probes.sh  progressive.sh  reval.sh  reval_results.txt  supa.txt  train_cifar10.job  vit.txt  vitall.txt  vitcol.txt  vitplot.txt
notebook/: .gitignore  clustering.ipynb  clustering_v2.ipynb  expertsB.md  nerf2d.ipynb  nerf2d.py  postplot.ipynb  reanalize.ipynb  results_gm_c20.txt  results_gm_c5.txt  results_km.txt  results_km_c20.txt
subnetworks/: README.md  pyproject.toml  setup.py  simple_mnist_example.py  submasking.py
subnetworks/subnetworks/: __init__.py  submasking.py
subnetworks/subnetworks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+175 files in other folders)
