[tool.poetry]
name = "subnetworks"
version = "0.1.0"
description = ""
authors = ["Alfonso Taboada Warmerdam <avtwarmerdam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.0"
torch = "^1.0.0"
numpy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
